--- a/resources/package.json
+++ b/resources/package.json
@@ -18,6 +18,7 @@
     "css-brunch": ">= 1.0 < 1.9",
     "javascript-brunch": ">= 1.0 < 1.9",
     "static-site-brunch": "^0.1.2",
-    "uglify-js-brunch": ">= 1.0 < 1.9"
+    "uglify-js-brunch": ">= 1.0 < 1.9",
+    "react-brunch": "^1.0.9"
   }
 }
