--- a/resources/package.json
+++ b/resources/package.json
@@ -17,8 +17,9 @@
     "clean-css-brunch": ">= 1.0 < 1.9",
     "css-brunch": ">= 1.0 < 1.9",
     "javascript-brunch": ">= 1.0 < 1.9",
+    "react-brunch": "^1.0.9",
+    "sass-brunch": "^1.9.1",
     "static-site-brunch": "^0.1.2",
-    "uglify-js-brunch": ">= 1.0 < 1.9",
-    "react-brunch": "^1.0.9"
+    "uglify-js-brunch": ">= 1.0 < 1.9"
   }
 }
